<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="48dp"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/car_relocation_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="car_lotting_btn_clear,
        car_lotting_camera,car_lotting_vin_code_et,car_lotting_vin_code_tv,
        car_lotting_driver_tv, car_lotting_driver_et, car_lotting_add_btn,
        car_lotting_recycler" />

    <TextView
        android:id="@+id/car_lotting_vin_code_tv"
        style="@style/MainBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vin_code"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/top_border"
        tools:text="VIN" />

    <EditText
        android:id="@+id/car_lotting_vin_code_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/x_base_sir"
        android:backgroundTint="@color/search_background"
        android:digits="@string/input_digits"
        android:paddingHorizontal="8dp"
        android:hint="@string/enter_vin"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters"
        android:maxLength="17"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@color/edt_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/car_lotting_camera"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/car_lotting_vin_code_tv"
        app:layout_constraintTop_toBottomOf="@id/top_border"
        tools:ignore="LabelFor"
        tools:text="WBXPA73495WC49281" />

    <ImageView
        android:id="@+id/car_lotting_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:baseline="32dp"
        android:importantForAccessibility="no"
        android:src="@drawable/camera"
        app:layout_constraintBaseline_toBaselineOf="@id/car_lotting_vin_code_et"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:tint="@color/camera_bck" />

    <TextView
        android:id="@+id/car_lotting_driver_tv"
        style="@style/MainBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/driver"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/car_lotting_vin_code_et" />

    <EditText
        android:id="@+id/car_lotting_driver_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/x_base_sir"
        android:backgroundTint="@color/search_background"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:paddingHorizontal="8dp"
        android:maxLines="1"
        android:hint="@string/enter_driver_code"
        android:textAllCaps="true"
        android:textColor="@color/edt_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@id/car_lotting_driver_tv"
        app:layout_constraintTop_toBottomOf="@id/car_lotting_vin_code_et"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/car_lotting_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/logo"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/car_lotting_btn_clear"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/car_lotting_driver_et"
        tools:text="Добавить" />

    <Button
        android:id="@+id/car_lotting_btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/red"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/car_lotting_add_btn"
        app:layout_constraintTop_toBottomOf="@id/car_lotting_driver_et"
        tools:text="Очистить" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/car_lotting_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/car_lotting_ok_btn"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/car_lotting_add_btn" />


    <Button
        android:id="@+id/car_lotting_ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="12dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/create_lot"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/car_lotting_recycler"
        tools:text="Создать лот" />

    <ProgressBar
        android:id="@+id/car_lotting_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/pb_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>