<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/lot_in_ladung_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="car_op_lot_tv, car_op_camera,
        car_op_row_tv, car_op_lot_et, car_op_ladung_et, car_op_btn_ok,
        car_op_btn_clear" />

    <TextView
        android:id="@+id/car_op_lot_tv"
        style="@style/MainBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lot"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/top_border" />

    <EditText
        android:id="@+id/car_op_lot_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/x_base_sir"
        android:backgroundTint="@color/search_background"
        android:hint="@string/enter_lot_number"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters"
        android:maxLength="25"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:textAllCaps="true"
        android:textColor="@color/edt_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/car_op_camera"
        app:layout_constraintStart_toEndOf="@id/car_op_lot_tv"
        app:layout_constraintTop_toBottomOf="@id/top_border"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/car_op_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:baseline="32dp"
        android:baselineAlignBottom="false"
        android:importantForAccessibility="no"
        android:src="@drawable/camera"
        app:layout_constraintBaseline_toBaselineOf="@id/car_op_lot_et"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:tint="@color/camera_bck" />

    <TextView
        android:id="@+id/car_op_row_tv"
        style="@style/MainBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/row"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/car_op_lot_et" />

    <EditText
        android:id="@+id/car_op_ladung_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/x_base_sir"
        android:backgroundTint="@color/search_background"
        android:hint="@string/enter_row"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:textAllCaps="true"
        android:textColor="@color/edt_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/car_op_row_tv"
        app:layout_constraintTop_toBottomOf="@id/car_op_lot_et"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/car_op_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/logo"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/car_op_btn_clear"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/car_op_ladung_et"
        tools:text="ОК" />

    <Button
        android:id="@+id/car_op_btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/red"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/car_op_btn_ok"
        app:layout_constraintTop_toBottomOf="@id/car_op_ladung_et"
        tools:text="Очистить" />

    <ProgressBar
        android:id="@+id/car_op_lot_in_ladung_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/pb_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>