<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
    <TextView
        android:id="@+id/car_op_way_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MainBtnStyle"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/top_border"
        android:text="@string/way"/>
    <TextView
        android:id="@+id/car_op_wagon_tv"
        style="@style/MainBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wagon"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/car_op_way_tv"
        />
    <Spinner
        android:id="@+id/car_op_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Spinner"
        app:layout_constraintStart_toEndOf="@id/car_op_way_tv"
        app:layout_constraintTop_toBottomOf="@id/top_border"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        android:entries="@array/ways"/>
    <EditText
        android:id="@+id/car_op_driver_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/x_base_sir"
        android:backgroundTint="@color/search_background"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingHorizontal="8dp"
        android:maxLength="7"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@color/edt_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@id/car_op_wagon_tv"
        app:layout_constraintTop_toBottomOf="@id/car_op_way_tv"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/container_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/logo"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/container_btn_clear"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/car_op_driver_et"
        tools:text="ОК" />

    <Button
        android:id="@+id/container_btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/clear"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/container_btn_ok"
        app:layout_constraintTop_toBottomOf="@id/car_op_driver_et"
        tools:text="Очистить" />


</androidx.constraintlayout.widget.ConstraintLayout>